Remove unused JS documentation file

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>🇨🇦 Canadian Citizenship Flashcards</span>
+  <span class="title">🇨🇦 Canadian Citizenship Flashcards</span>
   <span class="spacer"></span>
   <button mat-icon-button (click)="startNewSet()" aria-label="Restart">
     <mat-icon>refresh</mat-icon>
