--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,27 +1,37 @@
 <mat-toolbar color="primary">
-  <span class="title">Canadian Citizenship Flashcards</span>
+  <span class="title">Canadian Citizenship Quiz</span>
   <span class="spacer"></span>
-  <button mat-icon-button (click)="startNewSet()" aria-label="Restart">
+  <span class="stats">
+    <span class="score" [ngClass]="{'positive': score > 0, 'neutral': score === 0}">{{ score }}</span>
+    <span class="divider">|</span>
+    <span class="counter">{{ questionsAnswered }} answered</span>
+  </span>
+  <button mat-icon-button class="reset-button" (click)="resetScore()" aria-label="Reset score">
     <mat-icon [style.color]="'white'">refresh</mat-icon>
   </button>
 </mat-toolbar>
 
 <main class="main-container">
-  <div class="card-wrapper">
-    <div class="card-type" [ngClass]="showAnswer ? 'answer-label' : 'question-label'">
-      <span>{{ showAnswer ? 'Answer' : 'Question' }}</span>
-    </div>
-
-    <mat-card class="card" [ngClass]="{ answer: showAnswer, question: !showAnswer }" (click)="revealAnswer()">
+  <div class="card-wrapper" *ngIf="getCurrentQuestion()">
+    <mat-card class="card">
       <mat-card-content>
-        <p class="card-text">
-          {{ showAnswer ? cards()[index].answer : cards()[index].question }}
+        <p class="question-text">
+          {{ getCurrentQuestion()!.question }}
         </p>
+
+        <div class="options-container">
+          <div *ngFor="let option of getCurrentQuestion()!.options; let i = index"
+               class="option-item"
+               [ngClass]="{
+                 'correct-option': showAnswer && i === getCurrentQuestion()!.correctOptionIndex,
+                 'incorrect-option': showAnswer && i === selectedOption && i !== getCurrentQuestion()!.correctOptionIndex,
+                 'selected': selectedOption === i
+               }"
+               (click)="!showAnswer && selectOption(i)">
+            {{ option }}
+          </div>
+        </div>
       </mat-card-content>
     </mat-card>
-  </div>
-
-  <div class="action">
-    <p>Card {{ index + 1 }} of {{ cards().length }}</p>
   </div>
 </main>
