Add conditional check for `getCurrentQuestion()` in `app.html` to improve logic clarity

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -29,7 +29,7 @@
         </mat-card-content>
       </mat-card>
     </div>
-  } @else {
+  } @else if (getCurrentQuestion()) {
     <div class="card-wrapper" [@fadeInOut]="questionsAnswered < setSize">
       <mat-card class="card">
         <mat-card-content>
